PyQuest/tests/semantic_analysis/invalid/test005.ql
// Identifier dependent on itself (reflexive)
form testForm {
	"First Question"
	firstIdentifier : integer = firstIdentifier + 1
}